# nivora-aura-desktop

./: .gitattributes  .gitignore  BUILD_SUMMARY.md  CLAUDE.md  OLLAMA_SETUP.md  PRODUCTION_BUILD_SUMMARY.md  PROJECT_STATUS.md  README.md  REGRESSION_TEST_REPORT.md  RESOURCES_SETUP.md  SPOTIFY_COMMANDS_IMPLEMENTATION.md  clear-keyring.sh  package.json  pnpm-lock.yaml  reset-dev-env.sh  run-aura.sh  vite.config.ts
.claude/: settings.local.json
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  codeql.yml  pr-labeler.yml  release.yml
Documentation/: CI_CD_GUIDE.md  CI_CD_IMPROVEMENTS.md  GPU_ACCELERATION.md  GPU_FEATURE_SUMMARY.md  GPU_UI_INTEGRATION.md  HOMEASSISTANT_ARCHITECTURE.md  Nivora Aura_ Reclaiming Your Digital Sanctuary.md  ONLINE_MODE_GUIDE.md  Product Requirements Document_ Nivora Aura (Desktop MVP).md  RAG_ACCEPTANCE_CRITERIA.md  RAG_ARCHITECTURE.md  SPOTIFY_ACCEPTANCE_CRITERIA.md  SPOTIFY_ARCHITECTURE.md  SPOTIFY_MULTI_USER_BACKEND_TEST.md  SPOTIFY_MULTI_USER_COMPLETE.md  SPOTIFY_MULTI_USER_UI_STATUS.md  SPOTIFY_TESTING_GUIDE.md  SPOTIFY_USER_GUIDE.md  TAILWIND_V4_UPGRADE.md  TAILWIND_VERSION_DECISION.md  Technical Architecture Document_ Nivora Aura (Desktop MVP & Hardware Foundation).md  VOICE_BIOMETRICS_ARCHITECTURE.md  VOICE_BIOMETRICS_FRONTEND_PLAN.md  VOICE_BIOMETRICS_INTEGRATION_GUIDE.md  VOICE_BIOMETRICS_MODEL_SETUP.md  VOICE_BIOMETRICS_POC_RESULTS.md  WINDOWS_BUILD_GUIDE.md  WINDOWS_BUILD_STATUS.md  WINDOWS_VM_VERIFICATION.md
resources/ollama/models/: README.md
resources/ollama/models/blobs/: sha256-22a838ceb7fb22755a3b0ae9b4eadde629d19be1f651f73efb8c6b4e2cd0eea0  sha256-887433b89a901c156f7e6944442f3c9e57f3c55d6ed52042cbb7303aea994290
src/: App.tsx  index.css  main.tsx  store.ts
src-tauri/: Cargo.toml  aura-desktop.desktop  aura-desktop.sh  tauri.conf.json
src-tauri/src/: database.rs  entity_manager.rs  error.rs  ha_client.rs  lib.rs  llm.rs  main.rs  music_intent.rs  native_voice.rs  ollama_sidecar.rs  secrets.rs  smarthome_intent.rs  spotify_auth.rs  spotify_client.rs  tts.rs  voice_biometrics.rs  web_search.rs
src/components/: ChatView.tsx  DevicesView.tsx  EnrollmentModal.tsx  ErrorBoundary.tsx  HomeAssistantSettings.tsx  InputBar.tsx  SettingsModal.tsx  Sidebar.tsx  SpotifySettings.tsx  SystemStatusIndicator.tsx  ThemeSelector.tsx  UserProfilesSettings.tsx  WelcomeWizard.tsx
src/components/ui/: select.tsx  switch.tsx
src/hooks/: useAudioRecording.ts
src/stores/: themeStore.ts
src/styles/: theme-variables.css  themes.ts
src/utils/: errorHandler.ts
