[package]
name = "aura-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aura_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

# Async runtime and HTTP
tokio = { version = "1.40", features = ["full"] }  # Async runtime for voice pipeline and HTTP requests
reqwest = { version = "0.12", features = ["json"] }  # HTTP client for OpenAI-compatible API calls

# Database and storage
rusqlite = { version = "0.32", features = ["bundled"] }  # SQLite database for conversation persistence
dirs = "5.0"  # Cross-platform user directory access
keyring = "2.3"  # Secure API key storage using OS native keychain

# Native voice pipeline
whisper-rs = "0.15"  # Whisper.cpp bindings for speech-to-text
cpal = "0.15"  # Cross-platform audio I/O

# Text-to-Speech using Piper TTS (subprocess-based)
rodio = "0.17"  # Audio playback
hound = "3.5"  # WAV file handling for in-memory audio conversion

# Error handling
thiserror = "1.0"  # Custom error types with derived Error trait

