[package]
name = "aura-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "aura_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

# Async runtime and HTTP
tokio = { version = "1.40", features = ["full"] }  # Async runtime for voice pipeline and HTTP requests
reqwest = { version = "0.12", features = ["json"] }  # HTTP client for OpenAI-compatible API calls

# Database and storage
rusqlite = { version = "0.37", features = ["bundled"] }  # SQLite database for conversation persistence
dirs = "6.0"  # Cross-platform user directory access
keyring = "3.6"  # Secure API key storage using OS native keychain

# Native voice pipeline
whisper-rs = "0.15"  # Whisper.cpp bindings for speech-to-text
cpal = "0.16"  # Cross-platform audio I/O

# Text-to-Speech using Piper TTS (subprocess-based)
rodio = "0.21"  # Audio playback
hound = "3.5"  # WAV file handling for in-memory audio conversion

# Error handling
thiserror = "2.0"  # Custom error types with derived Error trait

# First-run wizard utilities
which = "8.0"  # Check if executables exist in PATH

# Web search for RAG (Retrieval-Augmented Generation)
searxng = "0.1.0"  # SearXNG client for privacy-focused web search

# Ollama sidecar process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal"] }  # Unix signal handling for graceful Ollama shutdown

